examples/test/testpolicy14248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14248
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key32: value31
      key23: value46
      key7: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value3
          key16: value15
          key4: value15
      podSelector:
        matchLabels:
          key4: value20
          key1: value38
